<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="articles">Articles</string>
    <string name="health_at_work">Health@Work</string>
    <string name="already_signed_up">You\'re already signed up!</string>
    <string name="read_length">%1$s mins</string>
    <string name="content_unavailable">Content is currently unavailable</string>
    <string name="broken_link_message">Sorry, this link doesn\'t seem to be working right now. Please try again later.</string>
    <string name="chat_disclaimer_clinic_disabled">This business is no longer active on League</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome to our Health Rewards Program!</string>
    <string name="welcome_description">It’s time to select a program that best fits your health and wellness needs.</string>
    <string name="build_healthy_habits">Build healthy habits</string>
    <string name="build_healthy_habits_description">Based on the program you select, each day we’ll give you simple goals to help you develop healthy habits that improve your overall well-being.</string>
    <string name="get_rewarded">Get rewarded</string>
    <string name="get_rewarded_description">Each completed activity gives you points you can redeem for League Credit usable in our online Marketplace.</string>
    <string name="agree_to_terms_to_begin">You must agree to the terms and conditions to begin</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="starts_in">Starts in %d hrs</string>
    <string name="expires_in">Expires in %d hrs</string>
    <string name="your_activity_for_today">Your activity for today</string>
    <string name="expired">Expired</string>
    <string name="expired_message">Your account expired on:</string>
    <string name="pending_header">Activation Pending</string>
    <string name="pending_message">Your account is active, and in the process of being set up.</string>
    <string name="activation_pending_header">Activation Pending</string>
    <string name="activation_pending_message">Your account will be active on:</string>
    <string name="lets_get_started">Let\'s get started!</string>
    <string name="leave_program">Leave Program</string>
    <string name="stay_in_program">Stay in Program</string>
    <string name="your_progress">Your Progress</string>
    <string name="program_ended_title">Program has ended. Ready to start a new one?</string>
    <string name="program_ended_message">Start a new program to continue earning rewards for completing activities!</string>
    <string name="get_inpsired_admin_url">https://league.com/blog/categories/future-of-work/?isapp=1</string>
    <string name="get_inspired_member_url">https://blog.league.com/category/member/?isapp=1</string>
    <string name="having_trouble_finding_the_right_program">Having trouble finding the right program?</string>
    <string name="chat_with_a_registered_nurse">Chat with a Registered Nurse!</string>
    <string name="registered_nurse">Registered nurse</string>
    <string name="registered_nurse_description">Get the answers and advice you need on health-related topics, including signs, symptoms and treatment options.\nThis chat is free, confidential and your privacy is protected. </string>
    <string name="health_programs_error">We\'re sorry, there was an error loading your Health Programs. Please try again later.</string>
    <string name="health_categories_description">Our Health Programs help you proactively reach your health goals and maintain a healthy lifestyle.</string>
    <string name="categories">Categories</string>
    <string name="featured">Featured</string>
    <string name="recommended">Recommended</string>
    <plurals name="points_verbose">
        <item quantity="one">Earn up to %1$,d point</item>
        <item quantity="other">Earn up to %1$,d points</item>
    </plurals>
    <plurals name="points">
        <item quantity="one">%1$,d point</item>
        <item quantity="other">%1$,d points</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="months_remaining">
        <item quantity="one">%1$,d month remaining</item>
        <item quantity="other">%1$,d months remaining</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="weeks_remaining">
        <item quantity="one">%1$,d week remaining</item>
        <item quantity="other">%1$,d weeks remaining</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="days_remaining">
        <item quantity="one">%1$,d day remaining</item>
        <item quantity="other">%1$,d days remaining</item>
    </plurals>
    <plurals name="start_more_programs">
        <item quantity="one">Start %d more program</item>
        <item quantity="other">Start %d more programs</item>
    </plurals>
    <string name="activities">Activities</string>
    <string name="start_health_program_unlimited">Start more programs</string>
    <string name="program_details_caption_format_with_points_weeks" tools:ignore="PluralsCandidate">%1$d week program • %2$s • Earn up to %3$,d points</string>
    <string name="program_details_caption_format_without_points_weeks" tools:ignore="PluralsCandidate">%1$d week program • %2$s</string>
    <string name="program_details_caption_format_with_points_days" tools:ignore="PluralsCandidate">%1$d day program • %2$s • Earn up to %3$,d points</string>
    <string name="program_details_caption_format_without_points_days" tools:ignore="PluralsCandidate">%1$d day program • %2$s</string>
    <string name="view_all">View all</string>
    <string name="error_category_not_found">We\'re sorry, there was an error loading that category.</string>
    <string name="start_health_program">Start Health Program</string>
    <string name="add_to_journey">Add to Journey</string>
    <string name="read_more">READ MORE</string>
    <string name="see_more">SEE MORE</string>
    <string name="helpful_tips">Helpful Tips</string>
    <string name="i_agree_to_these">I agree to these</string>
    <string name="terms_and_conditions"><![CDATA[<U>Terms and Conditions</U>]]></string>
    <string name="terms_and_conditions_normal">Terms and Conditions</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <plurals name="start_program_description_format_weeks">
        <item quantity="one">Are you ready to start the %1$s Health Program? We will send an activity each day for the next week to help you reach your goals!</item>
        <item quantity="other">Are you ready to start the %1$s Health Program? We will send an activity each day for the next %2$d weeks to help you reach your goals!</item>
    </plurals>
    <plurals name="start_program_description_format_days">
        <item quantity="one">Are you ready to start the %1$s Health Program? We will send an activity to help you reach your goals!</item>
        <item quantity="other">Are you ready to start the %1$s Health Program? We will send an activity each day for the next %2$d days to help you reach your goals!</item>
    </plurals>
    <string name="error_start_program">We\'re sorry, there was an error enrolling you in that Health Program. Please try again later.</string>
    <string name="active_program_error">We\'re sorry, there was an error loading your active Health Program. Please try again later.</string>
    <string name="active">Active</string>
    <string name="todays_activity">TODAY\'S ACTIVITY</string>
    <string name="tomorrows_activity">TOMORROW\'S ACTIVITY</string>
    <string name="completed_activity">I\'ve Completed This Activity</string>
    <string name="activity_details_error">We\'re sorry, there was an error loading your current activity details. Please try again later.</string>
    <string name="check_back_tomorrow">Check Back Tomorrow</string>
    <string name="todays_activity_lower">Today\'s Activity</string>
    <string name="tomorrows_activity_lower">Tomorrow\'s Activity</string>
    <string name="error_complete_activity">We\'re sorry, there was an error completing your activity, please try again later.</string>
    <string name="skip_this_activity">Skip This Activity</string>
    <string name="skip_message">The activity will be marked as incomplete and you won’t receive points for it.</string>
    <string name="skip_upper">SKIP</string>
    <string name="cancel_upper" tools:ignore="ButtonCase">CANCEL</string>
    <string name="error_skip_activity">We\'re sorry, there was an error skipping your activity. Please try again later.</string>
    <string name="youve_earned">You\'ve earned</string>
    <string name="youve_earned_total">You\'ve earned a total of</string>
    <string name="generic_activity_completion">Amazing job! Come back tomorrow for another Health Activity and continue your health journey!</string>
    <string name="come_back_tomorrow">Amazing job! Come back tomorrow for another Health Activity and continue your health journey!</string>
    <string name="number_of_points" tools:ignore="PluralsCandidate">%,d points</string>
    <string name="amazing_job">Amazing job! %s</string>
    <string name="view_my_rewards">View My Rewards</string>
    <string name="programs">Programs</string>
    <string name="health_programs">Health Programs</string>
    <string name="chat_link">Chat with your Care Team</string>
    <string name="rewards">Rewards</string>
    <string name="leave_program_name">Leave %s?</string>
    <string name="leave_program_disclaimer">Any progress in this program will be reset and you’ll need to start over.</string>
    <string name="error_leave_program">We\'re sorry, there was an error leaving your Health Program. Please try again later.</string>
    <string name="let_s_do_this">Let\'s do this!</string>
    <string name="view_activity">View Activity</string>
    <string name="select_a_new_program">Select a New Program</string>
    <string name="day_n">DAY %d</string>
    <string name="week_number_format">Week %d</string>
    <string name="weekly_activities">Weekly Activities</string>
    <string name="start_program_unlock">Start this program to unlock these activities!</string>
    <string name="health">health</string>
    <string name="quick_actions_error">We\'re sorry, there was an error loading your quick actions. Please try again later.</string>
    <string name="certify_info_accurate_final_approval_can">I certify that the information provided is accurate and that proposed plan changes are subject to final approval. Additional documentation may be required for verification. If found not to meet the relevant criteria, dependents or elections can be revoked anytime.</string>
    <string name="if_enrollment_not_complete_you_have_to_restart">If you do not complete your enrollment, your elections will not be saved and you’ll have to restart.</string>
    <string name="once_you_submit_add_to_health_spending_account">Once you submit, you\'ll be able to add your dependent to your Health Spending Account. This change will take effect immediately and no further action is required on your end.</string>
    <string name="close">Close</string>
    <string name="remove_activity_confirmation_message">Are you sure you want to remove this activity from your journey?</string>
    <string name="program_limit_message_title">You\'ve reached your program limit.</string>
    <string name="program_limit_message_description">Complete one of your active programs to add this to your journey.</string>
    <string name="cancel">Cancel</string>
    <string name="health_journey_remove">Remove</string>
</resources>