<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?color_background_primary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="?spacing_one"
        android:layout_marginEnd="?spacing_one"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        android:padding="?spacing_quarter"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        style="?typography_subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="?spacing_one_and_half"
        android:layout_marginTop="?spacing_one"
        android:layout_marginEnd="?spacing_one_and_half"
        android:gravity="center"
        android:text="@string/remove_activity_confirmation_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close" />

    <TextView
        android:id="@+id/submessage"
        style="?typography_body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="?spacing_one_and_half"
        android:layout_marginEnd="?spacing_one_and_half"
        android:layout_marginTop="?spacing_half"
        android:gravity="center"
        tools:text="@string/remove_activity_confirmation_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <life.league.genesis.widget.button.Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="?spacing_one"
        android:layout_marginTop="?spacing_one_and_half"
        android:layout_marginEnd="?spacing_one"
        app:button_style="danger_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submessage"
        app:text="@string/health_journey_remove" />

    <life.league.genesis.widget.button.Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="?spacing_one_and_half"
        android:layout_marginTop="?spacing_one"
        android:layout_marginEnd="?spacing_one_and_half"
        android:layout_marginBottom="?spacing_one_and_half"
        app:button_style="minimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:text="@string/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>

